--- a/views/school/students/studentmain.ejs
+++ b/views/school/students/studentmain.ejs
@@ -5,19 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/util.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
 </head>
 <body>
-    <button onclick="history.back()">Go Back</button>
-    <form action="/admin/dashboard">
-        <input type="submit" value="Dashboard">
-    </form>
-    <header>
-        <h2>Lincoln</h2>
-        <div>
-            <h4>FullName: <%= student.Fname %> <%= student.Lname %> </h4>
-            <h5>Email: <%= studentEmail.Email %></h5>
-            <img src="<%= student.imgUrl %>" alt="<%= student.Fname %>" width="200px" height="200px" style="border-radius: 100px">
+    <section class="py-20 bg-gray-100">
+        <div class="max-w-2xl py-0 mx-auto md:py-16">
+          <article class="overflow-hidden shadow-none md:shadow-md md:rounded-md">
+            <div class="bg-white md:rounded-b-md">
+              <div class="border-b p-9">
+                <div class="space-y-6">
+                 
+                    <div class="space-y-4">
+                        <button onclick="history.back()" style="padding: 10px">
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="30"
+                              height="30"
+                              fill="currentColor"
+                              class="bi bi-arrow-left"
+                              viewBox="0 0 16 16"
+                            >
+                              <path
+                                fill-rule="evenodd"
+                                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+                              />
+                            </svg>
+                          </button>
+                      <div>
+                        <img class="object-cover object-center w-full " src="<%= student.imgUrl %>" alt="<%= student.Fname %>" style="border-radius: 100px;" width="100px" height="100px">
+                        <p class="text-lg font-bold text-center"> <%= student.Fname %> <%= student.Lname %> </p>
+                        <p class="text-lg font-bold text-center"> <%= studentEmail.Email %></p>
+                        <p class="text-center"> Student </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </article>
         </div>
-    </header>
+      </section>
 </body>
 </html>
