--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
 </head>
 <body>
-    $)$
-    <h1>404 page succer</h1>
-    <a href="/">Go home</a>
+    <section class="flex items-center h-full p-16 dark:bg-gray-900 dark:text-gray-100">
+        <div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
+            <div class="max-w-md text-center">
+                <h2 class="mb-8 font-extrabold text-red-600 text-9xl">
+                    <span class="sr-only">Error</span>404
+                </h2>
+                <p class="text-2xl font-semibold md:text-3xl">Sorry, we couldn't find this page.</p>
+                <p class="mt-4 mb-8 dark:text-gray-400">But dont worry, you can find plenty of other things on our homepage.</p>
+                <a rel="noopener noreferrer" href="/" class="px-8 py-3 font-semibold text-white bg-red-400 rounded">Back to homepage</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
+
