--- a/views/school/courses/editCourse.ejs
+++ b/views/school/courses/editCourse.ejs
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-    <div class="limiter">
+    <!-- <div class="limiter">
 
 		<div class="container-login100">
 			<div class="wrap-login100">
@@ -60,7 +60,7 @@
 					</div>
                     <br><br>
                     <div class="wrap-input100 validate-input" data-validate = "Please enter course price">
-						<input class="input100" ype="number" name="price" value="<%= course.Price %>" id="price" placeholder="Update Course Price" required>
+						<input class="input100" type="number" name="price" value="<%= course.Price %>" id="price" placeholder="Update Course Price" required>
 						<span class="focus-input100"></span>
 					</div>
                     <br><br>
@@ -74,9 +74,79 @@
            
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
+    <style>
+        @import url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css");
+      </style>
+  
+      <!-- component -->
+      <div class="flex items-center justify-center min-h-screen p-6 bg-gray-100">
+        <div class="container max-w-screen-lg mx-auto">
+  
+          <div>
+            <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+              <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+              
+                     <div class="text-gray-600">
+                        <button onclick="history.back()" style="padding: 10px;"> 
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                              </svg></button>
+              <p class="mt-10 text-lg font-medium text-center">Edit Course</p>
+             
+            </div>
+                <div class="lg:col-span-2">
+                  <form
+                    action="/editCourse/<%= course._id %>"
+                    method="post"
+                    enctype="multipart/form-data"
+                  >
+                    <div
+                      class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5"
+                    >
+                      <div class="md:col-span-5">
+                        <label for="courseName">Course Name</label>
+                        <input
+                        type="text" name="courseName" value="<%= course.Name %>" id="courseName" placeholder="Update Course Name" required
+                          class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"
+                        />
+                      </div>
+  
+                      <div class="md:col-span-3">
+                        <label for="courseCode">Course Code</label>
+                        <input
+                        type="text" name="courseCode" value="<%= course.CourseCode %>" id="courseCode" placeholder="Update Course Code" required
+                          class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"
+                        />
+                      </div>
+  
+                      <div class="md:col-span-3">
+                        <label for="courseprice">Course Price</label>
+                        <input
+                        type="number" name="price" value="<%= course.Price %>" id="price" placeholder="Update Course Price" required
+                          class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"
+                        />
+                      </div>
+                      
+                      <div class="text-right md:col-span-5">
+                        <div class="inline-flex items-end">
+                          <button
+                            class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700"
+                          >
+                          <input type="submit" value="Update Course">
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     <!--===============================================================================================-->
