--- a/views/school/courses/notes/addNote.ejs
+++ b/views/school/courses/notes/addNote.ejs
@@ -105,113 +105,105 @@
     </style>
   </head>
   <body>
-    <div class="limiter">
-      <div class="container-login100">
-        <div class="wrap-login100">
-          <p style="color: red"><%= msg %></p>
-          <button onclick="history.back()" style="padding: 10px">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="30"
-              height="30"
-              fill="currentColor"
-              class="bi bi-arrow-left"
-              viewBox="0 0 16 16"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
-              />
-            </svg>
-          </button>
-          <form action="/addNote" method="POST" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
-
-            <span class="login100-form-title"> Add New Note </span>
-
-
-            <a href="#popup1" class="txt3">Add Cover</a>
-
-            <div class="wrap-input100 validate-input m-b-16">
-              <% if (courses.length > 0) { %>
-              <select
-                class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none"
-                name="crsID"
-                id="crsID"
-              >
-                <% courses.forEach(course => { %>
-                <option>Choose a Course</option>
-                <option value="<%= course._id %>"><%= course.Name %></option>
-                <% }) %>
-              </select>
-              <% } else { %>
-              <select name="crsID" id="crsID">
-                <option value="" disabled>No Available Course</option>
-              </select>
-              <% } %>
-            </div>
-            <br />
-            <div
-              class="wrap-input100 validate-input m-b-16"
-              data-validate="Please enter Note Title"
-            >
-              <input
-                type="text"
-                name="Name"
-                id="Name"
-                placeholder="Note Title"
-                accept="application/pdf"
-              />
-              <span class="focus-input100"></span>
-            </div>
-            <br /><br />
-
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Please enter note file"
-            >
-              <input
-                type="file"
-                name="Note"
-                id="Note"
-                placeholder="Note File"
-              />
-              <span class="focus-input100"></span>
-            </div>
-            <br /><br />
-            <div
-              class="container-login100-form-btn"
-              style="padding-bottom: 40px"
-            >
-              <button class="login100-form-btn">
-                <input type="submit" value="Add Note" />
-              </button>
-            </div>
-          </form>
+    <div class="flex items-center justify-center min-h-screen p-6 bg-gray-100">
+      <div class="container max-w-screen-lg mx-auto">
+        <div>
+         
+    
+          <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+            <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+              <div class="text-gray-600">
+                <button onclick="history.back()" style="padding: 10px">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="30"
+                    height="30"
+                    fill="currentColor"
+                    class="bi bi-arrow-left"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+                    />
+                  </svg>
+                </button>
+                <p class="mt-10 text-lg font-medium text-center">Add Note</p>
+              </div>
+             
+               
           
-          <div id="popup1" class="overlay">
-            <div class="popup">
-              <h2>Add Note Cover</h2>
-              <a class="close" href="">&times;</a>
-              <div class="content">
-                <form
-                  action="/addNote/Cover"
-                  method="POST"
-                  enctype="multipart/form-data"
-                >
-                  <label for="Cover">Note Cover </label>
-                  <input type="file" name="Cover" id="Note" />
-                  <br />
-                  <br />
-                  <input type="submit" value="Add Cover" />
+              <div class="lg:col-span-2">
+                <p style="text-align: center; color: rgb(190, 33, 33);"><%= msg %> </p>
+                <form action="/addNote/<%= bam %>" method="post" enctype="multipart/form-data">             
+                  <a href="#popup1/<%= bam %>" class="txt3">Add Cover</a>
+                <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5">
+                  <div class="md:col-span-5">
+                    <% if (courses.length > 0) { %>
+                    <label for="course">Choose a Course</label>
+                    <select  name="crsID"
+                    id="crsID" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50">
+                      
+                    <option>Choose a Course</option>
+                    <% courses.forEach(course => { %>
+                      
+                      <option value="<%= course._id %>"><%= course.Name %></option>
+                      <% }) %>
+                    </select>
+                    <% } else { %>
+                      <select name="crsID" id="crsID">
+                        <option value="" disabled>No Available Course</option>
+                      </select>
+                      <% } %>
+                  </div>
+                  <div class="md:col-span-5">
+                   
+                    <label for="lastname"></label>
+                    <input   type="text"
+                    name="Name"
+                    id="Name"
+                    placeholder="Note Title"
+                     class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" />
+                  </div>
+    
+                  <div class="md:col-span-2">
+                    <label for="file">Choose File</label>
+                    <input type="file" name="Note" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" accept="application/pdf" />
+                  </div>
+                  <div class="text-right md:col-span-5">
+                    <div class="inline-flex items-end">
+                      <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">   <input type="submit" value="Add Note" /></button>
+                    </div>
+                  </div>
+                </div>
                 </form>
+              </div>
+              <div id="popup1/<%= bam %>" class="overlay">
+                <div class="popup">
+                  <h2>Add Note Cover</h2>
+                  <a class="close" href="">&times;</a>
+                  <div class="content">
+                    <form
+                      action="/addNote/Cover/<%= bam %>"
+                      method="POST"
+                      enctype="multipart/form-data"
+                    >
+                      <label for="Cover">Note Cover </label>
+                      <input type="file" name="Cover" id="Note" accept="images/*" />
+                      <br />
+                      <br />
+                      <input type="submit" value="Add Cover" />
+                    </form>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-      
         </div>
+    
+       
       </div>
     </div>
-
   
 
   
