--- a/views/school/login.ejs
+++ b/views/school/login.ejs
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <div class="limiter">
+    <!-- <div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
                 <p style="text-align: center; color:red ;"><%= emailMsg %></p>
@@ -69,8 +69,63 @@
            
 			</div>
 		</div>
-	</div>
+	</div> -->
 
+
+
+<!-- component -->
+<div class="flex items-center justify-center min-h-screen p-6 bg-gray-100">
+    <div class="container max-w-screen-lg mx-auto">
+      <div>
+       
+  
+        <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+          <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+            <div class="text-gray-600">
+              <p class="text-lg font-medium">Admin Login</p>
+              <p>Please fill out all the fields.</p>
+
+  
+            </div>
+           
+             
+         
+  
+            <div class="lg:col-span-2">
+                <p style="text-align: center; color:red ;"><%= emailMsg %></p>
+                <p style="text-align: center; color:red ;"></p><%= passwordMsg %></p>
+                <p style="text-align: center; color:red ;"><%= msg %></p>
+              <form action="/adminLogin"  method="post" enctype="multipart/form-data">
+              <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5">
+  
+                <div class="md:col-span-5">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" placeholder="email@domain.com" />
+                </div>
+  
+                <div class="md:col-span-3">
+                  <label for="password">Password</label>
+                  <input type="password" name="password" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" placeholder="password" />
+                </div>
+  
+               
+  
+              
+                <div class="text-right md:col-span-5">
+                  <div class="inline-flex items-end">
+                    <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">Submit</button>
+                  </div>
+                </div>
+              </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+     
+    </div>
+  </div>
 
 
 
