--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -1,119 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="/images/icons/favicon.ico" />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/bootstrap/css/bootstrap.min.css"
+    />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
-    <!--===============================================================================================-->	
-        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css" />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
-    <!--===============================================================================================-->	
-        <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/css-hamburgers/hamburgers.min.css"
+    />
     <!--===============================================================================================-->
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link href="/dist/output.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/css/util.css">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/animsition/css/animsition.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/select2/select2.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/daterangepicker/daterangepicker.css"
+    />
+    <!--===============================================================================================-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
 
     <!--===============================================================================================-->
     <title>Register</title>
-</head>
-<body>
-    <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-                <p style="text-align: center;"><%= msg %> </p>
-                <form action="/register" method="post" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+  </head>
+  <body class="antialiased font-poppins">
 
-                    <span class="login100-form-title">
-						Register
-					</span>
 
-                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-						<input class="input100" type="email" name="Email" placeholder="Email" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
+<!-- component -->
+<div class="flex items-center justify-center min-h-screen p-6 bg-gray-100">
+  <div class="container max-w-screen-lg mx-auto">
+    <div>
+     
 
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter password">
-						<input class="input100" type="password" name="Pass" placeholder="Password" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <hr>
-                    <br>
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter first name">
-						<input class="input100" type="text" name="FName" placeholder="First Name" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter last name">
-						<input class="input100" type="text" name="LName" placeholder="Last Name" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter phone number">
-						<input class="input100" type="tel" name="PhoneNo" placeholder="Phone No" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <div class="" data-validate = "Please enter phone number">
-						<input class="" type="file" name="image" id="" accept="image/*">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <div class="container-login100-form-btn">
-						<button class="login100-form-btn">
-							Register
-						</button>
-					</div>
-                    <div class="flex-col-c p-t-170 p-b-40">
-						<span class="txt1 p-b-9">
-						Already have an account?
-						</span>
+      <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+        <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+          <div class="text-gray-600">
+            <p class="text-lg font-medium">Personal Details</p>
+            <p>Please fill out all the fields.</p>
+<div  style="margin-top: 100%;">
+  <span class=" txt1 p-b-9"> Already have an account? </span>
 
-                        <a href="/login" class="txt3">
-							Login
-						</a>
-					</div>
-                </form>
-            
+  <a href="/login" class="txt3"> Login </a>
+</div>
+
+          </div>
+         
            
-			</div>
-		</div>
-	</div>
+       
 
+          <div class="lg:col-span-2">
+            <p style="text-align: center; color: rgb(190, 33, 33);"><%= msg %> </p>
+            <form action="/register" method="post" enctype="multipart/form-data">
+            <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5">
+              <div class="md:col-span-5">
+               
+                <label for="firstname">First Name</label>
+                <input type="text" name="FName" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" />
+              </div>
+              <div class="md:col-span-5">
+               
+                <label for="lastname">Last Name</label>
+                <input type="text" name="LName" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" />
+              </div>
+
+              <div class="md:col-span-5">
+                <label for="Phone">Phone Number</label>
+                <input type="tel" name="PhoneNo" id="email" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" />
+              </div>
+
+              <div class="md:col-span-5">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="Email" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" placeholder="email@domain.com" />
+              </div>
+
+              <div class="md:col-span-3">
+                <label for="password">Password</label>
+                <input type="password" name="Pass" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" placeholder="password" />
+              </div>
+
+              <div class="md:col-span-2">
+                <label for="file">Choose File</label>
+                <input type="file" name="Image" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" accept="image/*" />
+              </div>
+
+             
+
+            
+              <div class="text-right md:col-span-5">
+                <div class="inline-flex items-end">
+                  <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">Register</button>
+                </div>
+              </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
    
+  </div>
+</div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
     <!--===============================================================================================-->
-	<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <script src="/vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/bootstrap/js/popper.js"></script>
-        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/popper.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/select2/select2.min.js"></script>
+    <script src="/vendor/select2/select2.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/daterangepicker/moment.min.js"></script>
-        <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <script src="/vendor/daterangepicker/moment.min.js"></script>
+    <script src="/vendor/daterangepicker/daterangepicker.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <script src="/vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
-        <script src="/js/main.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"
+      defer
+    ></script>
+    <!--===============================================================================================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
+
