--- a/views/student/course/add.ejs
+++ b/views/student/course/add.ejs
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+     <link href="/dist/output.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/util.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+  <link
+  href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+  rel=" stylesheet"
+/>
     <title>Add Course</title>
     <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
@@ -12,34 +20,112 @@
     </style>
     </head>
     <body>
+      
 
-        <div class="w3-container w3-padding-64" id="contact">
-            <h1>School Account Details</h1><br>
+
+
+
+<!-- component -->
+<div class="items-center justify-center min-h-screen p-6 bg-gray-100">
+  <div class="container max-w-screen-lg mx-auto">
+    <div>
+      <h2 class="text-xl font-semibold text-gray-600">Add Course</h2>
+      <p class="mb-6 text-gray-500">Please fill out all the fields.</p>
+      <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+        <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+          <div class="text-gray-600">
+           
+            <p style="margin-top: 30px;">School Account Number:</p>
             <p> <b><%= schoolAccount.nmbr %></b></p>
             <p class="w3-text-blue-grey w3-large"><b><%= schoolAccount.bank %></b></p>
-            <p><%= schoolAccount.Name %></p>
-            <p style="text-align: center; font-weight: bold;"><%= msg %> </p>
-            <form action="/regcourse"  method="post" enctype="multipart/form-data">
-                <% if (allCrs.length>0) { %>
+            
+          </div>
+
+          <div class="lg:col-span-2">
+            <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5">
+              <div class="md:col-span-5">
+                <p style="text-align: center; font-weight: bold; color: red;"><%= msg %> </p>
+                <form action="/regcourse"  method="post" enctype="multipart/form-data">
+                
+                <div class="relative z-0 w-full p-px mb-5">
+                  <% if (allCrs.length>0) { %>
                     <% allCrs.forEach(crs => { %>
-              <input class="w3-input"  type="radio" name="crse" value="<%= crs._id %>" id="" style="float: right;">
-              <label><span class="w3-pw3-padding-16adding-large"><b><%= crs.Name %> - <%= crs.CourseCode %>  </b> <span class="w3-tag" style="background-color: red;"><%= crs.Price %></span></span></label><br>
-              <% }) %>
-              <br>
-              <p><input class="w3-input w3-padding-16" type="number" placeholder="amount" required name="Amount"></p>
-              <br>
-              <label for="image">Add Reciept File</label>
-              <input type="file" name="image" id="">
-              <p><input class="w3-input w3-padding-16" type="datetime-local" placeholder="Date and time" required name="date" value="Date of Payment"></p>
-              <p><button class="w3-button w3-red w3-section" type="submit">Add</button></p>
+                  <legend class="absolute text-gray-500 transform scale-75 -top-3 origin-0">Choose an option</legend>
+                  <div class="block pt-3 pb-2 space-x-4">
+                    <label><span class="w3-pw3-padding-16adding-large"><b><%= crs.Name %> - <%= crs.CourseCode %>  </b> <span class="w3-tag" style="background-color: red;"><%= crs.Price %></span></span>
+                      <input
+                      type="radio" name="crse" value="<%= crs._id %>" id=""
+                        class="mr-2 text-black border-2 border-gray-300 focus:border-gray-300 focus:ring-black "
+                      />
+                    </label>
+                  
+                  </div>
+                  <span class="hidden text-sm text-red-600" id="error">Option has to be selected</span>
+                </div>
+                <% }) %>
+              </div>
+              </div>
+              </div>
+              </div>
+              
+
+              <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+                  <div class="lg:col-span-2">
+                    <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5">
+           
+              <div class="md:col-span-5">
+                <label for="email">Email Address</label>
+                <input type="text" name="email" id="email" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50" value="" placeholder="email@domain.com" />
+              </div>
+
+              <div class="md:col-span-3">
+                <label for="email">Course Amount</label>
+               <p><input type="number" name="Amount" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"  placeholder="Amount" required /></p> 
+              </div>
+
+              <div class="md:col-span-2">
+                <label for="file">Add Reciept File</label>
+                <input  type="file" name="image" id="" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"/>
+              </div>
+
+              <div class="md:col-span-3">
+               <p><input class="w3-input w3-padding-16" type="datetime-local" placeholder="Date and time" required name="date" value="Date of Payment" class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"  /></p> 
+              </div>
+
+      
+              <div class="text-right md:col-span-5">
+                <div class="inline-flex items-end">
+                  <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">Add</button>
+                </div>
+              </div>
               <% } else { %>
                 <h3>no course</h3>
               <% } %>
             </form>
+            </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+          
 
 </body>
 </html>
 
 
 
+
+
+
+ 
