--- a/views/student/course/home.ejs
+++ b/views/student/course/home.ejs
@@ -1,71 +1,230 @@
-<!DOCTYPE  HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en" [COLOR="Red"]viewsource="no"[/COLOR]>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-    <title><%= courseDet.Name %> </title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Karma"
+    />
+    <title><%= courseDet.Name %></title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
     <style>
-    body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-    .w3-bar-block .w3-bar-item {padding:20px}
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: "Karma", sans-serif;
+      }
+      .w3-bar-block .w3-bar-item {
+        padding: 20px;
+      }
     </style>
-    </head>
-    <body>
-    <% if (studentCSR.Verified==true) { %>    
-          <!-- Top menu -->
-          <div class="w3-top">
-            <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-              <div class=" w3-padding-16 w3-left" onclick="w3_open()">
-                <img  src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="90px" height="90px" style="border-radius: 100px; cursor: pointer;"></div>
-              <div class="w3-right w3-padding-16"> <a href="/logout">Logout ||</a></p></div>
-              <div class="w3-right w3-padding-16"> <a href="#videos">Videos ||</a></p></div>
-              <div class="w3-right w3-padding-16"> <a href="#notes">Notes ||</a></p></div>
-              <div class="w3-center w3-padding-16"><h3><b><%= user.Fname %> <%= user.Lname %></b></h3></div>
-            </div>
+  </head>
+  <body>
+    <div
+      id="view"
+      class="flex flex-row w-screen h-full"
+      x-data="{ sidenav: true }"
+    >
+      <div
+        id="sidebar"
+        class="h-screen px-3 overflow-x-hidden transition-transform duration-300 ease-in-out bg-black shadow-xl md:block w-30 md:w-60 lg:w-60"
+        x-show="sidenav"
+        @click.away="sidenav = false"
+      >
+        <div class="mt-16 space-y-6 md:space-y-10" style="margin-top: 50px">
+          <div id="profile" class="space-y-3">
+            <img
+              src="<%= user.imgUrl %>"
+              class="mx-auto rounded-full md:w-16"
+              alt="<%= user.Fname %>"
+              width="150px"
+              height="150px"
+            />
           </div>
+          <div style="margin-top: 50px">
+            <h3
+              class="font-medium text-center text-white md:text-sm"
+              style="font: 25px"
+            >
+              <b><%= user.Fname %> <%= user.Lname %></b>
+            </h3>
+            <p class="text-xs text-center text-gray-400">Student</p>
+          </div>
+        </div>
 
+        <div id="menu" class="flex flex-col space-y-2" style="margin-top: 40%">
+          <a
+            href="/student/edit"
+            class="px-2 py-2 mt-10 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:text-base"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="inline-block w-6 h-6 fill-current bi bi-person-plus-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"
+              />
+            </svg>
+            <span class="">Edit Profile</span>
+          </a>
+          <a
+            href="/regcourse"
+            class="px-2 py-2 mt-10 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:scale-105"
+            style="margin-top: 20%"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="inline-block w-6 h-6 bi bi-stack"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="m14.12 10.163 1.715.858c.22.11.22.424 0 .534L8.267 15.34a.598.598 0 0 1-.534 0L.165 11.555a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.66zM7.733.063a.598.598 0 0 1 .534 0l7.568 3.784a.3.3 0 0 1 0 .535L8.267 8.165a.598.598 0 0 1-.534 0L.165 4.382a.299.299 0 0 1 0-.535L7.733.063z"
+              />
+              <path
+                d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.598.598 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.659z"
+              />
+            </svg>
+            <span class="">Add Course</span>
+          </a>
+          <a
+            href="/logout"
+            class="px-2 py-2 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:scale-105"
+            style="margin-top: 20%"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="inline-block w-6 h-6 bi bi-box-arrow-left"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"
+              />
+            </svg>
+            <span class="">Logout</span>
+          </a>
+        </div>
+      </div>
 
-        </header>
+      <% if (studentCSR.Verified==true) { %>
 
-        <section style="padding:150px;" id="videos">
-            <h1><u>Videos</u></h1>
-            <% if (allVideo.length>0) { %>
-                <% allVideo.forEach(vid => { %>
-                 <article>
-                    <video width="320" height="240" controls>
-                        <source src="<%= vid.Video %>" type="video/mp4">
-                    </video>
-                    <caption><%= vid.Name %></caption>
-                 </article>
-                <% }) %>
-            <% } else { %>
-             <center><h3>No video Available</h3></center>
+      <section class="text-gray-600  body-font">
+        <div class="container px-5 py-24 mx-auto">
+          <h1 style="font-size: 20px">Videos</h1>
+          <div class="flex flex-wrap -m-4">
+            <% if (allVideo.length>0) { %> <% allVideo.forEach(vid => { %>
+            <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+              <article>
+                <video width="500" height="500" controls>
+                  <source
+                    src="<%= vid.Video %>"
+                    type="video/mp4"
+                    class="block object-cover object-center w-full h-full"
+                  />
+                </video>
+              </article>
+              <div class="mt-4">
+                <h3
+                  class="mb-1 text-xs tracking-widest text-gray-500 title-font"
+                >
+                  <%= vid.Name %>
+                </h3>
+              </div>
+            </div>
+            <% }) %> <% } else { %>
+            <center><h3>No video Available</h3></center>
             <% } %>
-            
-        </section >
+          </div>
+        </div>
+      </section>
 
-        <section style="padding:150px;" id="notes">
-            <h1><u>Notes</u></h1>
-            <% if (allnotes.length>0) { %>
-                <% allnotes.forEach(vid => { %>
-                 <article>
-                    <p><%= vid.Name  %> </p>
-                    <a href="<%= vid.Note %> ">Download</a>
+      <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto">
+          <h1 style="font-size: 20px">Notes</h1>
+          <div class="flex flex-wrap -m-4">
+            <% if (allnotes.length>0) { %> <% allnotes.forEach(vid => { %>
+            <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+              <article>
+                <article>
+                  <img
+                    src="<%= vid.Cover %> "
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
                 </article>
-                <% }) %>
-            <% } else { %>
-             <center><h3>No Notes Available</h3></center>
+              </article>
+              <div class="mt-4">
+                <h3
+                  class="mb-1 text-xs tracking-widest text-gray-500 title-font"
+                >
+                  <%= vid.Name %>
+                </h3>
+                <a href="<%= vid.Note %> ">Download</a>
+              </div>
+            </div>
+            <% }) %> <% } else { %>
+            <center><h3>No Notes Available</h3></center>
             <% } %>
-            
-        </section>
-    <% } else { %>
-     <center>
-        <h2>Good day <%= user.Fname %> <%= user.Lname %>, your course is being proccessed</h2>
-     </center>
-    <% } %>
-    
+          </div>
+        </div>
+      </section>
 
-    
-</body>
+      <% } else { %>
+      <div class="flex items-center justify-center w-full h-full">
+        <div
+          class="flex items-center justify-center space-x-1 text-sm text-gray-700"
+        >
+          <svg
+            fill="none"
+            class="w-6 h-6 animate-spin"
+            viewBox="0 0 32 32"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              clip-rule="evenodd"
+              d="M15.165 8.53a.5.5 0 01-.404.58A7 7 0 1023 16a.5.5 0 011 0 8 8 0 11-9.416-7.874.5.5 0 01.58.404z"
+              fill="currentColor"
+              fill-rule="evenodd"
+            />
+          </svg>
+
+          <div>Loading ...</div>
+          <h2>
+            Good day <%= user.Fname %> <%= user.Lname %>, your course is being
+            proccessed
+          </h2>
+        </div>
+      </div>
+      <% } %>
+    </div>
+  </body>
 </html>
