--- a/views/student/editDet.ejs
+++ b/views/student/editDet.ejs
@@ -1,94 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Details</title>
-     <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="/images/icons/favicon.ico" />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/bootstrap/css/bootstrap.min.css"
+    />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
-    <!--===============================================================================================-->	
-        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css" />
     <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
-    <!--===============================================================================================-->	
-        <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/css-hamburgers/hamburgers.min.css"
+    />
     <!--===============================================================================================-->
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link href="/dist/output.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/css/util.css">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/animsition/css/animsition.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/select2/select2.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/daterangepicker/daterangepicker.css"
+    />
+    <!--===============================================================================================-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
 
     <!--===============================================================================================-->
-</head>
-<body>
+  </head>
+  <body class="antialiased font-poppins">
+    <style>
+      @import url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css");
+    </style>
 
-    <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-                <p style="text-align: center;"><%= msg %> </p>
-                <form action="/student/edit"  method="post" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+    <!-- component -->
+    <div class="flex items-center justify-center min-h-screen p-6 bg-gray-100">
+      <div class="container max-w-screen-lg mx-auto">
 
-                    <span class="login100-form-title">
-						Login
-					</span>
-
-                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-						<input class="input100" type="text" name="FName" value="<%= user.Fname %>" placeholder="First Name" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter password">
-						<input class="input100" type="text" name="LName" placeholder="Last Name" value="<%= user.Lname %>" id="">
-						<span class="focus-input100"></span>
-					</div>
-                    <br><br>
-                    <div class="container-login100-form-btn">
-						<button class="login100-form-btn">
-							Edit
-						</button>
-					</div>
-                    <div class="flex-col-c p-t-170 p-b-40">
-
-                        <a href="/" class="txt3">
-							Home
-						</a>
-					</div>
-                </form>
-            
+        <div>
+          <div class="p-4 px-4 mb-6 bg-white rounded shadow-lg md:p-8">
+            <div class="grid grid-cols-1 gap-4 text-sm gap-y-2 lg:grid-cols-3">
+                   <div class="text-gray-600">
+            <p class="text-lg font-medium">Edit Details</p>
            
-			</div>
-		</div>
-	</div>
+          </div>
+              <div class="lg:col-span-2">
+                <p style="text-align: center; color: rgb(190, 33, 33)">
+                  <%= msg %>
+                </p>
+                <form
+                  action="/student/edit"
+                  method="post"
+                  enctype="multipart/form-data"
+                >
+                  <div
+                    class="grid grid-cols-1 gap-4 text-sm gap-y-2 md:grid-cols-5"
+                  >
+                    <div class="md:col-span-5">
+                      <label for="email">First Name</label>
+                      <input
+                        type="text"
+                        name="FName"
+                        value="<%= user.Fname %>"
+                        placeholder="First Name"
+                        id=""
+                        class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"
+                      />
+                    </div>
 
+                    <div class="md:col-span-3">
+                      <label for="password">Last Name</label>
+                      <input
+                        type="text"
+                        name="LName"
+                        placeholder="Last Name"
+                        value="<%= user.Lname %>"
+                        id=""
+                        class="w-full h-10 px-4 mt-1 border rounded bg-gray-50"
+                      />
+                    </div>
 
+                    <div class="text-right md:col-span-5">
+                      <div class="inline-flex items-end">
+                        <button
+                          class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700"
+                        >
+                          Edit
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
     <!--===============================================================================================-->
-	<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <script src="/vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/bootstrap/js/popper.js"></script>
-        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/popper.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/select2/select2.min.js"></script>
+    <script src="/vendor/select2/select2.min.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/daterangepicker/moment.min.js"></script>
-        <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <script src="/vendor/daterangepicker/moment.min.js"></script>
+    <script src="/vendor/daterangepicker/daterangepicker.js"></script>
     <!--===============================================================================================-->
-        <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <script src="/vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
-        <script src="/js/main.js"></script>
-</body>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
