--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -6,104 +6,283 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<script src="https://cdn.tailwindcss.com"></script>
+  <link href="/dist/output.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/util.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+  <link
+  href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+  rel=" stylesheet"
+/>
+<!--Replace with your tailwind.css once created-->
+
+<!--Regular Datatables CSS-->
+<link
+  href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"
+  rel="stylesheet"
+/>
+<!--Responsive Extension Datatables CSS-->
+<link
+  href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"
+  rel="stylesheet"
+/>
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .w3-bar-block .w3-bar-item {padding:20px}
+      /*Overrides for Tailwind CSS */
+
+      /*Form fields*/
+      .dataTables_wrapper select,
+      .dataTables_wrapper .dataTables_filter input {
+        color: #4a5568;
+        /*text-gray-700*/
+        padding-left: 1rem;
+        /*pl-4*/
+        padding-right: 1rem;
+        /*pl-4*/
+        padding-top: 0.5rem;
+        /*pl-2*/
+        padding-bottom: 0.5rem;
+        /*pl-2*/
+        line-height: 1.25;
+        /*leading-tight*/
+        border-width: 2px;
+        /*border-2*/
+        border-radius: 0.25rem;
+        border-color: #edf2f7;
+        /*border-gray-200*/
+        background-color: #edf2f7;
+        /*bg-gray-200*/
+      }
+
+      /*Row Hover*/
+      table.dataTable.hover tbody tr:hover,
+      table.dataTable.display tbody tr:hover {
+        background-color: #ebf4ff;
+        /*bg-indigo-100*/
+      }
+
+      /*Pagination Buttons*/
+      .dataTables_wrapper .dataTables_paginate .paginate_button {
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Pagination Buttons - Current selected */
+      .dataTables_wrapper .dataTables_paginate .paginate_button.current {
+        color: #fff !important;
+        /*text-white*/
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+          0 1px 2px 0 rgba(0, 0, 0, 0.06);
+        /*shadow*/
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        background: #667eea !important;
+        /*bg-indigo-500*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Pagination Buttons - Hover */
+      .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+        color: #fff !important;
+        /*text-white*/
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+          0 1px 2px 0 rgba(0, 0, 0, 0.06);
+        /*shadow*/
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        background: #667eea !important;
+        /*bg-indigo-500*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Add padding to bottom border */
+      table.dataTable.no-footer {
+        border-bottom: 1px solid #e2e8f0;
+        /*border-b-1 border-gray-300*/
+        margin-top: 0.75em;
+        margin-bottom: 0.75em;
+      }
+
+      /*Change colour of responsive icon*/
+      table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:before,
+      table.dataTable.dtr-inline.collapsed
+        > tbody
+        > tr
+        > th:first-child:before {
+        background-color: #667eea !important;
+        /*bg-indigo-500*/
+      }
 </style>
 </head>
-<body>
+  <body class="antialiased font-poppins">
+    <div
+      id="view"
+      class="flex flex-row w-screen h-full"
+      x-data="{ sidenav: true }"
+    >
+    
+      <div
+        id="sidebar"
+        class="h-screen px-3 overflow-x-hidden transition-transform duration-300 ease-in-out bg-black shadow-xl md:block w-30 md:w-60 lg:w-60"
+        x-show="sidenav"
+        @click.away="sidenav = false"
 
-<!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()"
-  class="w3-bar-item w3-button">Close Menu</a>
-  <a href="/student/edit" onclick="w3_close()" class="w3-bar-item w3-button">Edit Profile</a>
-  <a href="/regcourse" onclick="w3_close()" class="w3-bar-item w3-button">Add Course</a>
-  <a href="/logout" onclick="w3_close()" class="w3-bar-item w3-button">Logout</a>
+        
+      >
+        <div class="mt-16 space-y-6 md:space-y-10" style="margin-top:50px ;">
+          <div id="profile" class="space-y-3">
+            <img  src="<%= user.imgUrl %>"       
+            class="mx-auto rounded-full md:w-16"
+            alt="<%= user.Fname %>" width="150px" height="150px" ></div>
+            <div style="margin-top: 50px;">
+              <h3 class="font-medium text-center text-white md:text-sm" style="font: 25px;"><b><%= user.Fname %> <%= user.Lname %></b></h3>
+              <p class="text-xs text-center text-gray-400">Student</p>
+            </div>
+          </div>
+        
+          <div id="menu" class="flex flex-col space-y-2" style="margin-top:40% ;">
+            <a
+            href="/student/edit"
+              class="px-2 py-2 mt-10 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:text-base"
+            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="inline-block w-6 h-6 fill-current bi bi-person-plus-fill" viewBox="0 0 16 16">
+              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+            </svg>
+              <span class="">Edit Profile</span>
+            </a>
+            <a
+            href="/regcourse"
+              class="px-2 py-2 mt-10 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:scale-105"
+              style="margin-top:20% ;"
+            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="inline-block w-6 h-6 bi bi-stack " viewBox="0 0 16 16">
+              <path d="m14.12 10.163 1.715.858c.22.11.22.424 0 .534L8.267 15.34a.598.598 0 0 1-.534 0L.165 11.555a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.66zM7.733.063a.598.598 0 0 1 .534 0l7.568 3.784a.3.3 0 0 1 0 .535L8.267 8.165a.598.598 0 0 1-.534 0L.165 4.382a.299.299 0 0 1 0-.535L7.733.063z"/>
+              <path d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.598.598 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.659z"/>
+            </svg>
+              <span class="">Add Course</span>
+            </a>
+            <a
+            href="/logout" 
+              class="px-2 py-2 text-sm font-medium text-gray-500 transition duration-150 ease-in-out rounded-md hover:bg-red-500 hover:text-white hover:scale-105"
+              style="margin-top:20%;"
+            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="inline-block w-6 h-6 bi bi-box-arrow-left " viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
+              <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+            </svg>
+              <span class="">Logout</span>
+            </a>
+          </div>
+        </div>
 
-</nav>
+  <!--Container-->
+  <div class="container w-full px-2 mx-auto md:w-4/5 xl:w-3/5">
+    <h1 style="text-align: center; padding: 20px; font-size: 50px;">Student DashBoard</h1>
+  <!--Title-->
+  <h1
+    class="flex items-center px-2 py-8 font-sans text-xl font-bold text-red-500 break-normal md:text-2xl"
+  >
+    Courses
+  </h1>
 
-<!-- Top menu -->
-<div class="w3-top">
-  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-    <div class=" w3-padding-16 w3-left" onclick="w3_open()">
-      <img  src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="90px" height="90px" style="border-radius: 100px; cursor: pointer;"></div>
-    <div class="w3-right w3-padding-16"> <a href="/logout">Logout</a></div>
-    <div class="w3-center w3-padding-16"><h3><b><%= user.Fname %> <%= user.Lname %></b></h3>
-    <br>
-  </div>
-  </div>
-</div>
-
-
-<!-- w3-content defines a container for fixed size centered content, 
-and is wrapped around the whole page content, except for the footer in this example -->
-<div class="w3-content" style="max-width:1400px">
-
-<!-- Grid -->
-<div class="w3-row">
+  <!--Card-->
+  <div id="recipients" class="p-8 mt-6 bg-white rounded shadow lg:mt-0">
     <% if (myCourse.length>0) { %>
-        <% myCourse.forEach(crs => { %>
-            <% var details= allcrs.find(i=>i._id==crs.crsID) %> 
-
-<!-- Blog entries -->
-<div class="w3-col s12" style="padding:150px">
-  <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-    <img src="/crsimg.jpg" alt="Nature" style="width:100%;object-fit:cover; height: 100px;">
-    <div class="w3-container">
-      <h3><b><%= details.Name %></b></h3>
-      <h5><%= details.CourseCode %></h5>
-    </div>
-
-    <div class="w3-container">
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button onclick="move('/student/course/<%= crs._id %>')" class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Verified  </b> <span class="w3-tag" style="background-color: red;"><%= crs.Verified %></span></span></p>
-        </div>
-      </div>
-    </div>
+      <table
+      id="example"
+      class="stripe hover"
+      style="width: 100%; padding-top: 1em; padding-bottom: 1em"
+    >
+      <thead>
+        <tr>
+          <th data-priority="1">Course Code</th>
+          <th data-priority="2">Course Name</th>
+          <th data-priority="3">Verified</th>
+          <th data-priority="4">Actions</th>
+        </tr>
+      </thead>
+      <% myCourse.forEach(crs => { %>
+        <% var details = allcrs.find(i=>i._id==crs.crsID) %>   
+ 
+      <tbody>
+        <tr>
+          <td><%= details.Name %></td>
+          <td><%= details.CourseCode %></td>
+          <td><span style="background-color: red; color:white;"><%= crs.Verified %></span></td>
+          <td>
+            <button  onclick="move('/student/course/<%= crs._id %>')"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" style="margin-top: 10px;">
+            
+            Read More
+            <svg class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+          </button>
+          </td>
+        </tr>
+      </tbody>
+      <% }) %>
+    </table>
+    <% } else { %>
+    <p>There are no Courses</p>
+    <% } %>
   </div>
-
-  <hr>
-  <% }) %>
-
-<% } else { %>
-    <center><h1>No Courses yet</h1></center>
-<% } %>
-<!-- END BLOG ENTRIES -->
+  <!--/Card-->
 </div>
+    </div>
 
-<!-- Introduction menu -->
-
-
-<!-- END GRID -->
-</div><br>
-
-<!-- END w3-content -->
-</div>
 </body>
+
+ <!--Datatables -->
+ <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+ <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+ <script>
+   $(document).ready(function () {
+     var table = $("#example")
+       .DataTable({
+         responsive: true,
+       })
+       .columns.adjust()
+       .responsive.recalc();
+   });
+ </script>
+  <script
+  type="text/javascript"
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+></script>
+
 <script>
-    function move(a) {
-        window.location=a
-    }
+  function move(a) {
+      window.location=a
+  }
 </script>
 
 
 <script>
-  // Script to open and close sidebar
-  function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-  }
-   
-  function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-  }
-  </script>
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+ 
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
 </html>
-
-
-
