--- a/views/success.ejs
+++ b/views/success.ejs
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
 </head>
 <body>
-<center><h1>Sucessfully <%= tlk %> </h1></center>
-<center><a href="<%= goTo %> " target="_blank">Click here</a></center>
+<!-- component -->
+<div class="flex items-center justify-center w-full h-full">
+	<div class="flex items-center justify-center space-x-1 text-sm text-gray-700">
+		 
+				<svg fill='none' class="w-6 h-6 animate-spin" viewBox="0 0 32 32" xmlns='http://www.w3.org/2000/svg'>
+					<path clip-rule='evenodd'
+						d='M15.165 8.53a.5.5 0 01-.404.58A7 7 0 1023 16a.5.5 0 011 0 8 8 0 11-9.416-7.874.5.5 0 01.58.404z'
+						fill='currentColor' fill-rule='evenodd' />
+				</svg>
+
+		 
+		<div>Loading ...</div>
+        <h1>Sucessfully <%= tlk %> </h1>
+        <a rel="noopener noreferrer" href="<%= goTo %>" class="px-8 py-3 font-semibold text-white bg-red-400 rounded">Click Here</a>
+	</div>
+</div>
 </body>
 </html>
